# veridion

./: .env.example  .gitignore  .npmrc  API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh  tsconfig.base.json  tsconfig.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: .eslintrc.js  jest.config.ts  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/web/: next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: home.spec.ts
contracts/audit-registry/: Cargo.toml
contracts/audit-registry/src/: lib.rs  test.rs
contracts/project-registry/: Cargo.toml
contracts/project-registry/src/: lib.rs  test.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
docker/: Dockerfile.api  Dockerfile.web
docs/: plugin-example.md  plugins.md
plugins/access-control/: package.json
plugins/access-control/src/: index.test.ts  index.ts
plugins/dos/: package.json
plugins/dos/src/: index.test.ts  index.ts
plugins/gas/: .eslintrc.js  package.json
plugins/gas/src/: index.test.ts  index.ts
plugins/oracle/: package.json
plugins/oracle/src/: index.test.ts  (+1 more)
plugins/overflow/: package.json
plugins/randomness/: package.json
plugins/reentrancy/: package.json
scripts/: create-issues.sh  issues.json
(+63 files in other folders)
