[package]
name = "veridion-project-registry"
version = "0.1.0"
edition = "2021"
description = "Stellar Soroban contract for project registration"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.1"

[dev-dependencies]
soroban-sdk = { version = "21.0.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
